# semantic-search-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  semcp-dev.sh  test_delete_me.py  verify_qdrant_fix.py
.agent/rules/: documentation.md
.agent/workflows/: architect.md  context.md  handover.md
.cursor/commands/: architect.md  context.md  handover.md
.cursor/rules/: documentation.mdc
docs/: index_tasks.md  index_troubleshooting.md
docs/tasks/: enhance_tool_description.md  fix_install_script.md  folder_depth_navigation.md  folder_grouping.md  folder_hide_unhide.md  implement_cli.md  implement_graph_visualization.md  implement_server.md  migrate_to_local_index.md  optimize_indexing.md  refine_tool_description.md  setup_project.md  simplify_folder_grouping.md
docs/troubleshooting/: qdrant_locking.md
scripts/: verify_simple_store.py
semantic_search_mcp/: cli.py  server.py
semantic_search_mcp/graph/: __init__.py  dependency_analyzer.py
semantic_search_mcp/indexer/: engine.py  simple_store.py  watcher.py
semantic_search_mcp/web/: __init__.py  api.py
semantic_search_mcp/web/static/: app.js  index.html  styles.css
