[project]
name = "semantic-search-mcp"
version = "0.1.2"
description = "Semantic search MCP server with persistent indexing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastembed>=0.4.0",
    "qdrant-client>=1.7.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.0.0",
    "onnxruntime-gpu>=1.16.0",
]

[project.scripts]
semcp = "semantic_search_mcp.cli:app"
semantic_search_mcp = "semantic_search_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["semantic_search_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
